@@ -14,6 +14,8 @@ Release Notes - Apache Knox - Version 0.6.1
     * [KNOX-575] - Adds more logging for ShiroProvider LDAP Authentication.
     * [KNOX-564] - Topology deployment fails for no configured providers
     * [KNOX-590] - CLI sys-user-auth-test and user-auth-test have improved messages and work for more Shiro configs
+    * [KNOX-597] - Improve diagnostic logging of HTTP traffic
+    * [KNOX-596] - Add diagnostics to topology depoloyment
 
 ** Bug
     * [KNOX-554] - Fixed support for gateway.path change + added support for X-Forward-* headers in admin topology API.
